# nonebot_mirai_plugin_fortune

./: README.md  pyproject.toml
nonebot_plugin_fortune/: __init__.py  config.py
