[tool.poetry]
name = "nonebot_mirai_plugin_fortune"
version = "1.0.0"
description = "Fortune divination!"
authors = ["fate0361 <fate03610@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/fate0361/nonebot_mirai_plugin_fortune"
homepage = "https://github.com/fate0361/nonebot_mirai_plugin_fortune"
documentation = "https://github.com/fate0361/nonebot_mirai_plugin_fortune#readme"
keywords = ["nonebot2", "nonebot_adapter_mirai", "nonebot-plugin", "Fortune", "fate0361"]
packages = [{include = "nonebot_mirai_plugin_fortune"}]
exclude = ["nonebot_mirai_plugin_fortune/resource/img"]

[tool.poetry.dependencies]
python = "^3.9"
nonebot2 = "^2.0.0rc4"
nonebot-adapter-onebot = "^2.2.0"
nonebot-plugin-apscheduler = "^0.2.0"
pillow = "^9.0.0"
httpx = "^0.23.0"
aiofiles = "^0.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tencentyun"
url = "https://mirrors.tencent.com/pypi/simple"
priority = "primary"

[[tool.poetry.source]]
name = "PyPI"
priority = "explicit"
